--- a/index.html
+++ b/index.html
@@ -64,9 +64,6 @@ http://www.tooplate.com/view/2075-digital-team
             <li><a href="#work" class="smoothScroll">کارها</a></li>
             <li><a href="#about" class="smoothScroll">درباره ما</a></li>
             <li><a href="#team" class="smoothScroll">تیم</a></li>
-            <li><a href="#portfolio" class="smoothScroll">رزومه</a></li>
-            <li><a href="#pricing" class="smoothScroll">قیمت گذاری</a></li>
-            <li><a href="#contact" class="smoothScroll">تماس با ما</a></li>
           </ul>
         </div>
       </div>
@@ -125,9 +122,9 @@ http://www.tooplate.com/view/2075-digital-team
             data-wow-delay="1s"
           >
             <i class="icon-laptop medium-icon"></i>
-            <h3>لپتاپ</h3>
+            <h3>طراحی وب سایت</h3>
             <hr />
-            <p>ما همه لپتاپ داریم</p>
+            <p>اگه یه وب سایت خفن می خوای، خوش اومدی</p>
           </div>
           <div
             class="col-lg-4 col-md-4 col-sm-4 wow fadeInUp"
@@ -182,48 +179,15 @@ http://www.tooplate.com/view/2075-digital-team
             />
           </div>
           <div class="col-md-6 col-sm-12">
-            <h3 class="bold">سامانه مقالات علمی</h3>
-            <h1 class="heading bold">این سامانه علمی است</h1>
-            <!-- Nav tabs -->
-            <!-- <ul class="nav nav-tabs" role="tablist">
-              <li class="active">
-                <a
-                  href="#design"
-                  aria-controls="design"
-                  role="tab"
-                  data-toggle="tab"
-                  >DESIGN</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#mobile"
-                  aria-controls="mobile"
-                  role="tab"
-                  data-toggle="tab"
-                  >MOBILE</a
-                >
-              </li>
-              <li>
-                <a
-                  href="#social"
-                  aria-controls="social"
-                  role="tab"
-                  data-toggle="tab"
-                  >SOCIAL</a
-                >
-              </li>
-            </ul> -->
-            <!-- tab panes -->
+            <h3 class="bold">سامانه آموزش و اشتراک مطالب درسی قدرینو</h3>
+            <!-- <h1 class="heading bold">این سامانه علمی است</h1> -->
             <div class="tab-content">
               <div role="tabpanel" class="tab-pane active" id="design">
-                <p>
-                  هدف رسیدن به سطح مطلوبی از دانش و به وجود آوردن اشتیاق به
-                  یادگیری و پژوهش میباشد این سامانه شاید در ابتدا شبیه به یک
-                  فروم معمولی یا حتی مقاله های ساده همچون ویرگول یا مدیوم باشد
-                  اما نقطه قوت این سامانه آنجایی به چشم می آید که تمامی کاربران
-                  میتوانند در تولید و ویرایش محتوای این سامانه دخیل باشند و نام
-                  خود را جزو نویسندگان آن مطلب قرار دهند.
+                <p style="text-align: justify;">
+                  این سامانه در ابتدا شبیه سایت هایی مثل ویرگول و Medium به نظر می رسد ولی در نوع تخصصی خودش یعنی آموزش آکادمیک. با ارائه توضیحات کامل تر در ادامه متوجه تفاوت های اصلی این سامانه می شویم.
+                </p>
+                <p style="text-align: justify;">
+                  یکی از مشکلاتی که ما دانشجویان و دانش آموزانی که برای کنکور یا یک آزمون درسی تلاش میکنند نبود منابع خوب مطالعاتی، در صورت وجود این فرد مجبور هست هزینه زیادی را برای کلاس های آموزش بدهد تا بتواند به جزوه های این اساتید دسترسی داشته باشند و همچنین جزوات خوب و زیادی در دانشگاه ها یا سایت های اینترنتی پیدا می شود ولی به دلیل پراکندگی و انبوه جزوات نامطلوب یا تجربه های کاربری بدی که سایت های ارائه دهنده این جزوات چه سایت های معمولی چه سایت های دانشگاهی دارند کاربران موفق نمی شوند به این مطالب دسترسی پیدا کنند. در صورتی که سامانه ای به وجود بیاید که بتواند برای دروس مختلف دانشگاهی و دبیرستانی امکان اشتراک گذاری جزوات را توسط اساتید، دانشجویان و دانش آموزان بدهد و همچنین با ایجاد سیستم امتیاز دهی و نظردهی به توان این جزوه ها رو رتبه بندی کرد که بتوانیم جزوه هایی که از کیفیت بالاتری برخوردار هستند در نتایج جستجو کاربران بالاتر قرار بگیرند و به راحت در دسترس کاربران قرار بگیرد البته یه ایراد دیگه ای هم بعضا این جزوه ها دارند دست نویس یا کیفیت تصویر پایینی هست که این جزوات دارند که با ارائه امکان پست و مطلب نویسی می توان این کمبود را جبران کرد و قابلیت ویرایش این مطالب و تایید آنها توسط ناظر باعث افزایش کیفیت این مطالب خواهد شد. 
                 </p>
               </div>
             </div>
@@ -395,257 +359,12 @@ http://www.tooplate.com/view/2075-digital-team
       </div>
     </section>
 
-    <!-- portfolio section -->
-    <div id="portfolio">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 col-sm-12">
-            <div class="section-title">
-              <strong>04</strong>
-              <h1 class="heading bold">OUR PORTFOLIO</h1>
-              <hr />
-            </div>
-            <!-- ISO section -->
-            <div class="iso-section">
-              <ul class="filter-wrapper clearfix">
-                <li>
-                  <a href="#" data-filter="*" class="selected opc-main-bg"
-                    >All</a
-                  >
-                </li>
-                <li>
-                  <a href="#" class="opc-main-bg" data-filter=".html">HTML</a>
-                </li>
-                <li>
-                  <a href="#" class="opc-main-bg" data-filter=".photoshop"
-                    >Photoshop</a
-                  >
-                </li>
-                <li>
-                  <a href="#" class="opc-main-bg" data-filter=".wordpress"
-                    >Wordpress</a
-                  >
-                </li>
-                <li>
-                  <a href="#" class="opc-main-bg" data-filter=".mobile"
-                    >Mobile</a
-                  >
-                </li>
-              </ul>
-              <div class="iso-box-section wow fadeIn" data-wow-delay="0.9s">
-                <div class="iso-box-wrapper col4-iso-box">
-                  <div
-                    class="iso-box html wordpress mobile col-lg-4 col-md-4 col-sm-6"
-                  >
-                    <a
-                      href="images/portfolio-img1.jpg"
-                      data-lightbox-gallery="portfolio-gallery"
-                      ><img src="images/portfolio-img1.jpg" alt="portfolio img"
-                    /></a>
-                  </div>
-
-                  <div class="iso-box wordpress col-lg-4 col-md-4 col-sm-6">
-                    <a
-                      href="images/portfolio-img2.jpg"
-                      data-lightbox-gallery="portfolio-gallery"
-                      ><img src="images/portfolio-img2.jpg" alt="portfolio img"
-                    /></a>
-                  </div>
-
-                  <div class="iso-box html mobile col-lg-4 col-md-4 col-sm-6">
-                    <a
-                      href="images/portfolio-img3.jpg"
-                      data-lightbox-gallery="portfolio-gallery"
-                      ><img src="images/portfolio-img3.jpg" alt="portfolio img"
-                    /></a>
-                  </div>
-
-                  <div class="iso-box wordpress col-lg-4 col-md-4 col-sm-6">
-                    <a
-                      href="images/portfolio-img4.jpg"
-                      data-lightbox-gallery="portfolio-gallery"
-                      ><img src="images/portfolio-img4.jpg" alt="portfolio img"
-                    /></a>
-                  </div>
-
-                  <div
-                    class="iso-box html photoshop col-lg-4 col-md-4 col-sm-6"
-                  >
-                    <a
-                      href="images/portfolio-img5.jpg"
-                      data-lightbox-gallery="portfolio-gallery"
-                      ><img src="images/portfolio-img5.jpg" alt="portfolio img"
-                    /></a>
-                  </div>
-
-                  <div class="iso-box photoshop col-lg-4 col-md-4 col-sm-6">
-                    <a
-                      href="images/portfolio-img6.jpg"
-                      data-lightbox-gallery="portfolio-gallery"
-                      ><img src="images/portfolio-img6.jpg" alt="portfolio img"
-                    /></a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- pricing section -->
-    <section id="pricing">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 col-sm-12 text-center">
-            <div class="section-title">
-              <strong>05</strong>
-              <h1 class="heading bold">OUR PRICING</h1>
-              <hr />
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6">
-            <div class="plan plan-one wow bounceIn" data-wow-delay="0.3s">
-              <div class="plan_title">
-                <i class="icon-mobile medium-icon"></i>
-                <h3>BASIC</h3>
-                <h2>$150 <span>per year</span></h2>
-              </div>
-              <ul>
-                <li>100 GB Cloud Storage</li>
-                <li>5 Pro Websites</li>
-                <li>10 Secured Emails</li>
-                <li>24-hour Support</li>
-              </ul>
-              <button class="btn btn-warning">Get it now</button>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6">
-            <div class="plan plan-two wow bounceIn" data-wow-delay="0.3s">
-              <div class="plan_title">
-                <i class="icon-desktop medium-icon"></i>
-                <h3>BUSINESS</h3>
-                <h2>$260 <span>per year</span></h2>
-              </div>
-              <ul>
-                <li>200 GB Cloud Storage</li>
-                <li>10 Pro Websites</li>
-                <li>20 Secured Emails</li>
-                <li>30-Minute Support</li>
-              </ul>
-              <button class="btn btn-warning">Take this!</button>
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6">
-            <div class="plan plan-three wow bounceIn" data-wow-delay="0.3s">
-              <div class="plan_title">
-                <i class="icon-cloud medium-icon"></i>
-                <h3>PROFESSIONAL</h3>
-                <h2>$380 <span>per year</span></h2>
-              </div>
-              <ul>
-                <li>500 GB Cloud Storage</li>
-                <li>20 Pro Websites</li>
-                <li>40 Secured Emails</li>
-                <li>Live Support</li>
-              </ul>
-              <button class="btn btn-warning">Buy Now</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- contact section -->
-    <section id="contact">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 col-sm-12 text-center">
-            <div class="section-title">
-              <strong>06</strong>
-              <h1 class="heading bold">CONTACT US</h1>
-              <hr />
-            </div>
-          </div>
-          <div class="col-md-6 col-sm-12 contact-info">
-            <h2 class="heading bold">CONTACT INFO</h2>
-            <p>
-              Duis aute irure dolor in reprehenderit in voluptate velit esse
-              cillum dolore eu fugiat nulla pariatur. Excepteu sunt in culpa qui
-              officia deserunt mollit anim id.
-            </p>
-            <div class="col-md-6 col-sm-4">
-              <h3>
-                <i
-                  class="icon-envelope medium-icon wow bounceIn"
-                  data-wow-delay="0.6s"
-                ></i>
-                EMAIL
-              </h3>
-              <p>hello@company.com</p>
-            </div>
-            <div class="col-md-6 col-sm-4">
-              <h3>
-                <i
-                  class="icon-phone medium-icon wow bounceIn"
-                  data-wow-delay="0.6s"
-                ></i>
-                PHONES
-              </h3>
-              <p>010-020-0340 | 090-080-0760</p>
-            </div>
-          </div>
-          <div class="col-md-6 col-sm-12">
-            <form
-              action="#"
-              method="get"
-              class="wow fadeInUp"
-              data-wow-delay="0.6s"
-            >
-              <div class="col-md-6 col-sm-6">
-                <input
-                  type="text"
-                  class="form-control"
-                  placeholder="Name"
-                  name="name"
-                />
-              </div>
-              <div class="col-md-6 col-sm-6">
-                <input
-                  type="email"
-                  class="form-control"
-                  placeholder="Email"
-                  name="email"
-                />
-              </div>
-              <div class="col-md-12 col-sm-12">
-                <textarea
-                  class="form-control"
-                  placeholder="Message"
-                  rows="7"
-                  name="message"
-                ></textarea>
-              </div>
-              <div class="col-md-offset-4 col-md-8 col-sm-offset-4 col-sm-8">
-                <input
-                  type="submit"
-                  class="form-control"
-                  value="SEND MESSAGE"
-                />
-              </div>
-            </form>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <!-- footer section -->
     <footer>
       <div class="container">
         <div class="row">
           <div class="col-md-12 col-sm-12">
-            <p>Copyright © Digital Team HTML5 Template | Design: Tooplate</p>
-            <hr />
             <ul class="social-icon">
               <li>
                 <a
