--- a/index.html
+++ b/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa">
   <head>
     <meta charset="utf-8" />
-    <title>Digital Team HTML5 Layout - Tooplate</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="keywords" content="" />
-    <meta name="description" content="" />
-    <!--
 
-Template 2075 Digital Team
+    <!-- Primary Meta Tags -->
+    <title>قدرینو</title>
+    <meta name="title" content="قدرینو" />
+    <meta name="description" content="گروه مهندسی قدرینو " />
 
-http://www.tooplate.com/view/2075-digital-team
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://ghadrino.ir/" />
+    <meta property="og:title" content="قدرینو" />
+    <meta property="og:description" content="گروه مهندسی قدرینو " />
+    <meta property="og:image" content="" />
 
--->
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://ghadrino.ir/" />
+    <meta property="twitter:title" content="قدرینو" />
+    <meta property="twitter:description" content="گروه مهندسی قدرینو " />
+    <meta property="twitter:image" content="" />
+
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/font-awesome.min.css" />
     <link rel="stylesheet" href="css/animate.min.css" />
@@ -56,7 +64,7 @@ http://www.tooplate.com/view/2075-digital-team
             <span class="icon icon-bar"></span>
             <span class="icon icon-bar"></span>
           </button>
-          <a href="#" class="navbar-brand">Ghadrino.ir</a>
+          <a href="/" class="navbar-brand">Ghadrino.ir</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -183,11 +191,32 @@ http://www.tooplate.com/view/2075-digital-team
             <!-- <h1 class="heading bold">این سامانه علمی است</h1> -->
             <div class="tab-content">
               <div role="tabpanel" class="tab-pane active" id="design">
-                <p style="text-align: justify;">
-                  این سامانه در ابتدا شبیه سایت هایی مثل ویرگول و Medium به نظر می رسد ولی در نوع تخصصی خودش یعنی آموزش آکادمیک. با ارائه توضیحات کامل تر در ادامه متوجه تفاوت های اصلی این سامانه می شویم.
+                <p style="text-align: justify">
+                  این سامانه در ابتدا شبیه سایت هایی مثل ویرگول و Medium به نظر
+                  می رسد ولی در نوع تخصصی خودش یعنی آموزش آکادمیک. با ارائه
+                  توضیحات کامل تر در ادامه متوجه تفاوت های اصلی این سامانه می
+                  شویم.
                 </p>
-                <p style="text-align: justify;">
-                  یکی از مشکلاتی که ما دانشجویان و دانش آموزانی که برای کنکور یا یک آزمون درسی تلاش میکنند نبود منابع خوب مطالعاتی، در صورت وجود این فرد مجبور هست هزینه زیادی را برای کلاس های آموزش بدهد تا بتواند به جزوه های این اساتید دسترسی داشته باشند و همچنین جزوات خوب و زیادی در دانشگاه ها یا سایت های اینترنتی پیدا می شود ولی به دلیل پراکندگی و انبوه جزوات نامطلوب یا تجربه های کاربری بدی که سایت های ارائه دهنده این جزوات چه سایت های معمولی چه سایت های دانشگاهی دارند کاربران موفق نمی شوند به این مطالب دسترسی پیدا کنند. در صورتی که سامانه ای به وجود بیاید که بتواند برای دروس مختلف دانشگاهی و دبیرستانی امکان اشتراک گذاری جزوات را توسط اساتید، دانشجویان و دانش آموزان بدهد و همچنین با ایجاد سیستم امتیاز دهی و نظردهی به توان این جزوه ها رو رتبه بندی کرد که بتوانیم جزوه هایی که از کیفیت بالاتری برخوردار هستند در نتایج جستجو کاربران بالاتر قرار بگیرند و به راحت در دسترس کاربران قرار بگیرد البته یه ایراد دیگه ای هم بعضا این جزوه ها دارند دست نویس یا کیفیت تصویر پایینی هست که این جزوات دارند که با ارائه امکان پست و مطلب نویسی می توان این کمبود را جبران کرد و قابلیت ویرایش این مطالب و تایید آنها توسط ناظر باعث افزایش کیفیت این مطالب خواهد شد. 
+                <p style="text-align: justify">
+                  یکی از مشکلاتی که ما دانشجویان و دانش آموزانی که برای کنکور یا
+                  یک آزمون درسی تلاش میکنند نبود منابع خوب مطالعاتی، در صورت
+                  وجود این فرد مجبور هست هزینه زیادی را برای کلاس های آموزش بدهد
+                  تا بتواند به جزوه های این اساتید دسترسی داشته باشند و همچنین
+                  جزوات خوب و زیادی در دانشگاه ها یا سایت های اینترنتی پیدا می
+                  شود ولی به دلیل پراکندگی و انبوه جزوات نامطلوب یا تجربه های
+                  کاربری بدی که سایت های ارائه دهنده این جزوات چه سایت های
+                  معمولی چه سایت های دانشگاهی دارند کاربران موفق نمی شوند به این
+                  مطالب دسترسی پیدا کنند. در صورتی که سامانه ای به وجود بیاید که
+                  بتواند برای دروس مختلف دانشگاهی و دبیرستانی امکان اشتراک گذاری
+                  جزوات را توسط اساتید، دانشجویان و دانش آموزان بدهد و همچنین با
+                  ایجاد سیستم امتیاز دهی و نظردهی به توان این جزوه ها رو رتبه
+                  بندی کرد که بتوانیم جزوه هایی که از کیفیت بالاتری برخوردار
+                  هستند در نتایج جستجو کاربران بالاتر قرار بگیرند و به راحت در
+                  دسترس کاربران قرار بگیرد البته یه ایراد دیگه ای هم بعضا این
+                  جزوه ها دارند دست نویس یا کیفیت تصویر پایینی هست که این جزوات
+                  دارند که با ارائه امکان پست و مطلب نویسی می توان این کمبود را
+                  جبران کرد و قابلیت ویرایش این مطالب و تایید آنها توسط ناظر
+                  باعث افزایش کیفیت این مطالب خواهد شد.
                 </p>
               </div>
             </div>
@@ -358,7 +387,6 @@ http://www.tooplate.com/view/2075-digital-team
         </div>
       </div>
     </section>
-
 
     <!-- footer section -->
     <footer>
