--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fa">
   <head>
     <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Primary Meta Tags -->
     <title>قدرینو</title>
