--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </section>
 
     <!-- work section -->
-    <section id="work">
+    <!-- <section id="work">
       <div class="container">
         <div class="row">
           <div class="col-md-12 col-sm-12">
@@ -166,7 +166,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- about section -->
     <section id="about">
@@ -174,8 +174,8 @@
         <div class="row">
           <div class="col-md-12 col-sm-12 text-center">
             <div class="section-title">
-              <strong>۰۲</strong>
-              <h1 class="heading bold">پرپوزال</h1>
+              <strong>۰۱</strong>
+              <h1 class="heading bold">توضیحات پروژه</h1>
               <hr />
             </div>
           </div>
@@ -225,13 +225,196 @@
       </div>
     </section>
 
+
+    <!-- char section -->
+    <section id="Beneficiaries">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 col-sm-12 text-center">
+            <div class="section-title">
+              <strong>۰۲</strong>
+              <h1 class="heading bold">ذی نفعان</h1>
+              <hr />
+            </div>
+          </div>
+          <div class="col-sm-12">
+            <ul style="font-size: 18px;">
+              <li>مدیران و سرمایه گذاران سامانه قدرینو ( به جز اکبری )</li>
+              <li>دانش آموزان</li>
+              <li>دانشجویان</li>
+              <li>اساتید</li>
+              <li>معلمان</li>
+              <li>افراد مشغول در حوزه های گسترده تدریس</li>
+              <li>تولید کنندگان محتوا علمی و درسی</li>
+              <li>کلیۀ افراد علاقه مند به مطالعه</li>
+              <li>ادمین های سیستم</li>
+              <li>سرمایه گذاران تبلیغی</li>
+              <li>سیستم آموزشی کشور</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- necessary section -->
+    <section id="necessary">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 col-sm-12 text-center">
+            <div class="section-title">
+              <strong>۰۴</strong>
+              <h1 class="heading bold">نیازمندی ها</h1>
+              <hr />
+            </div>
+          </div>
+
+          <div class="col-sm-12">
+            <!-- <h1 class="heading bold">این سامانه علمی است</h1> -->
+            <div class="tab-content">
+              <div role="tabpanel" class="tab-pane active" id="design">
+                <div class="necessary-item">
+                  <h4>ثبت نام</h4>
+                  <p>- قابلیت ثبت نام کاربر با ایمیل و موبایل</p>
+                </div>
+                <div class="necessary-item">
+                  <h4>ورود</h4>
+                  <p>- قابلیت ورود کاربران با ایمیل و رمز عبور و همچنین از طریق OTG</p>
+                </div>
+                <div class="necessary-item">
+                  <h4>پست و مطالب آموزش
+                  </h4>
+                  <p>- قابلیت نوشتن مقالات و مطالب آموزشی دروس</p>
+                </div>
+                <div class="necessary-item">
+                  <h4>دسته بندی مطالب
+                  </h4>
+                  <p>- قابلیت دسته بندی مطالب بر اساس دروس، رشته، پایه، تاریخ</p>
+                </div>
+                <div class="necessary-item">
+                  <h4>امکان آپلود جزوات
+                  </h4>
+                  <p>- امکان آپلود فایل های درسی با فرمت های مختلف</p>
+                </div>
+                <div class="necessary-item">
+                  <h4>امکان دانلود فایل های درسی</h4>
+                  <p>- امکان دانلود و قابلیت پرینت و PDF فایل ها و مطالب درسی</p>
+                </div>
+                <div class="necessary-item">
+                  <h4>دسته بندی و سطح دسترسی کاربران</h4>
+                  <p>- قابلیت وجود کاربران مختلف با دسترسی های مختلف در نقش های ادمین، ناظر، کاربر، نویسنده</p>
+                </div>
+                <div class="necessary-item">
+                  <h4>جستجو</h4>
+                  <p>- قابلیت جستجو دروس و جزوات با فیلتر های مختلف و داینامیک</p>
+                </div>
+                <div class="necessary-item">
+                  <h4>ویرایش مطالب و جزوات</h4>
+                  <p>- ادمین و ناظر و نویسنده قابلیت ویرایش مطالب را داشته باشند</p>
+                </div>
+                <div class="necessary-item">
+                  <h4>امکان ثبت تغییرات و ویرایش مطالب توسط کاربر
+                  </h4>
+                  <p>- قابلیت ارائه گزارش و ویرایش مطالب و جزوات کاربران و تایید توسط ناظر</p>
+                </div>
+                <div class="necessary-item">
+                  <h4>امکان حذف مطالب و جزوات
+                  </h4>
+                  <p>- قابلیت حذف مطالب</p>
+                </div>
+                <div class="necessary-item">
+                  <h4>امکان پرداخت</h4>
+                  <p>- در راستای ارتقای سرویس، امکان Donate کردن وجود داشته باشه</p>
+                </div>
+                <div class="necessary-item">
+                  <h4>امکان پرداخت آفلاین</h4>
+                  <p>از جمله کارت به کارت و شماره حساب</p>
+                </div>
+                <div class="necessary-item">
+                  <h4>امکان معرفی نویسنده گان برتر</h4>
+                  <p>- جهت ارتقای کیفیت مطالب کاربران برتر اعلام می شود</p>
+                </div>
+                <div class="necessary-item">
+                  <h4>امکان ثبت بازخورد</h4>
+                  <p>- قابلیت ثبت نظر و ارائه سیستم امتیازدهی</p>
+                </div>
+                <div class="necessary-item">
+                  <h4>قرار گیری جزوات بین المللی</h4>
+                  <p>- قابلیت قرار دادن کتاب ها و جزوات بین المللی</p>
+                </div>
+                <div class="necessary-item">
+                  <h4>امکان ترجمه</h4>
+                  <p>- قابلیت ترجمه توسط کاربران</p>
+                </div>
+                <div class="necessary-item">
+                  <h4>سیستم بلاگ</h4>
+                  <p>- سیستم وبلاگ برای اطلاعات سایت</p>
+                </div>
+                <div class="necessary-item">
+                  <h4>سیستم شبکه اجتماعی محدود</h4>
+                  <p>- پرسش و پاسخ مطالب و اشتراک گذاری مشکلات</p>
+                </div>
+                <div class="necessary-item">
+                  <h4>امکان درآمدزایی</h4>
+                  <p>- قابلیت درآمدزایی در صورت ارائه مطالب آموزشی در مورد قهدریجان</p>
+                </div>
+                <div class="necessary-item">
+                  <h4>دروس پیشنهادی</h4>
+                  <p>- قابلیت ارائه پیشنهاد دروس</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- char section -->
+    <section id="chart">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 col-sm-12 text-center">
+            <div class="section-title">
+              <strong>۰۴</strong>
+              <h1 class="heading bold">نمودار سطح صفر</h1>
+              <hr />
+            </div>
+          </div>
+          <div class="col-md-8 fadeIn">
+            <img src="./images/chart.jpg" style="width: 100%;">
+          </div>
+          <div class="col-md-4" >
+            <p style="text-align: justify;">
+              مدل آبشاری یک مدل ترتیبی توسعه و تولید نرم‌افزار است و در آن مراحل تولید به شکل یک جریان مداوم متمایل به سمت پایین است (همانند یک آبشار) که شامل فازهای تحلیل خواسته‌ها،طراحی، پیاده‌سازی یا implementation، ٓازمودن و تست کردن، یکپارچه سازی یا integration، و دادن محصول به بازار می‌شود. اغلب گفته می‌شود ریشهٔ اصطلاح آبشاری از مقاله‌ای گرفته شده‌است که توسط وینستون واکر رویس در سال ۱۹۷۰ نوشته شده‌است. مدیریت و مراحل تکمیل پروژه در این متدولوژی به سادگی قابل پیاده‌سازی است. زیرا در مرحله اول که مرحله بررسی نیازمندی‌های پروژه می‌باشد، مشتری و تیم برنامه‌نویسی طی چند جلسه به بررسی نیازمندی‌ها و خواسته‌های پروژه می‌پردازند
+
+            </p>
+            <p>
+              دلایل انتخاب :
+            </p>
+            <p>
+              ۱. مشخص بودن نیاز مندی ها 
+            </p>
+            <p>
+              ۲. مشخص بودن اعضای گروه 
+            </p>
+            <p>
+              ۳. مناسب بودن فرایند ترتیبی برای گروه های کوچک
+            </p>
+            <p>
+              ۴ . مشخص بودن شرایط توسعه 
+            </p>
+
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- team section -->
     <section id="team">
       <div class="container">
         <div class="row">
           <div class="col-md-12 col-sm-12">
             <div class="section-title">
-              <strong>۰۳</strong>
+              <strong>۰۵</strong>
               <h1 class="heading bold">تیم خفن ما</h1>
               <hr />
             </div>
