--- a/index.html
+++ b/index.html
@@ -379,13 +379,27 @@
               <hr />
             </div>
           </div>
-          <div class="col-md-8 fadeIn">
+          <div class="col-md-8 col-md-offset-2">
             <img src="./images/chart.jpg" style="width: 100%;">
           </div>
-          <div class="col-md-4" >
+        </div>
+      </div>
+    </section>
+
+    <!-- model section -->
+    <section id="chart">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 col-sm-12 text-center">
+            <div class="section-title">
+              <strong>۰۵</strong>
+              <h1 class="heading bold">نمودار آبشاری</h1>
+              <hr />
+            </div>
+          </div>
+          <div class="col-SM-12" >
             <p style="text-align: justify;">
               مدل آبشاری یک مدل ترتیبی توسعه و تولید نرم‌افزار است و در آن مراحل تولید به شکل یک جریان مداوم متمایل به سمت پایین است (همانند یک آبشار) که شامل فازهای تحلیل خواسته‌ها،طراحی، پیاده‌سازی یا implementation، ٓازمودن و تست کردن، یکپارچه سازی یا integration، و دادن محصول به بازار می‌شود. اغلب گفته می‌شود ریشهٔ اصطلاح آبشاری از مقاله‌ای گرفته شده‌است که توسط وینستون واکر رویس در سال ۱۹۷۰ نوشته شده‌است. مدیریت و مراحل تکمیل پروژه در این متدولوژی به سادگی قابل پیاده‌سازی است. زیرا در مرحله اول که مرحله بررسی نیازمندی‌های پروژه می‌باشد، مشتری و تیم برنامه‌نویسی طی چند جلسه به بررسی نیازمندی‌ها و خواسته‌های پروژه می‌پردازند
-
             </p>
             <p>
               دلایل انتخاب :
@@ -414,7 +428,7 @@
         <div class="row">
           <div class="col-md-12 col-sm-12">
             <div class="section-title">
-              <strong>۰۵</strong>
+              <strong>۰۶</strong>
               <h1 class="heading bold">تیم خفن ما</h1>
               <hr />
             </div>
