Add - Style and Switch Chart

--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#home" class="smoothScroll">خانه</a></li>
-            <li><a href="#work" class="smoothScroll">کارها</a></li>
             <li><a href="#about" class="smoothScroll">درباره ما</a></li>
             <li><a href="#team" class="smoothScroll">تیم</a></li>
           </ul>
@@ -369,23 +368,6 @@
       </div>
     </section>
 
-    <!-- char section -->
-    <section id="chart">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12 col-sm-12 text-center">
-            <div class="section-title">
-              <strong>۰۴</strong>
-              <h1 class="heading bold">نمودار سطح صفر</h1>
-              <hr />
-            </div>
-          </div>
-          <div class="col-md-8 col-md-offset-2">
-            <img src="./images/chart.jpg" style="width: 100%;">
-          </div>
-        </div>
-      </div>
-    </section>
 
     <!-- model section -->
     <section id="chart">
@@ -393,7 +375,7 @@
         <div class="row">
           <div class="col-md-12 col-sm-12 text-center">
             <div class="section-title">
-              <strong>۰۵</strong>
+              <strong>۰۴</strong>
               <h1 class="heading bold">نمودار آبشاری</h1>
               <hr />
             </div>
@@ -418,6 +400,23 @@
               ۴ . مشخص بودن شرایط توسعه 
             </p>
 
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- char section -->
+    <section id="chart-0">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 col-sm-12 text-center">
+            <div class="section-title">
+              <strong>۰۵</strong>
+              <h1 class="heading bold">نمودار سطح صفر</h1>
+              <hr />
+            </div>
+          </div>
+          <div class="col-md-8 col-md-offset-2">
+            <img src="./images/chart.jpg" style="width: 100%;">
           </div>
         </div>
       </div>
