prototype added + img

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fa">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
     <title>قدرینو</title>
@@ -225,7 +225,6 @@
       </div>
     </section>
 
-
     <!-- char section -->
     <section id="Beneficiaries">
       <div class="container">
@@ -238,7 +237,7 @@
             </div>
           </div>
           <div class="col-sm-12">
-            <ul style="font-size: 18px;">
+            <ul style="font-size: 18px">
               <li>مدیران و سرمایه گذاران سامانه قدرینو ( به جز اکبری )</li>
               <li>دانش آموزان</li>
               <li>دانشجویان</li>
@@ -278,52 +277,66 @@
                 </div>
                 <div class="necessary-item">
                   <h4>ورود</h4>
-                  <p>- قابلیت ورود کاربران با ایمیل و رمز عبور و همچنین از طریق OTG</p>
+                  <p>
+                    - قابلیت ورود کاربران با ایمیل و رمز عبور و همچنین از طریق
+                    OTG
+                  </p>
                 </div>
                 <div class="necessary-item">
-                  <h4>پست و مطالب آموزش
-                  </h4>
+                  <h4>پست و مطالب آموزش</h4>
                   <p>- قابلیت نوشتن مقالات و مطالب آموزشی دروس</p>
                 </div>
                 <div class="necessary-item">
-                  <h4>دسته بندی مطالب
-                  </h4>
-                  <p>- قابلیت دسته بندی مطالب بر اساس دروس، رشته، پایه، تاریخ</p>
+                  <h4>دسته بندی مطالب</h4>
+                  <p>
+                    - قابلیت دسته بندی مطالب بر اساس دروس، رشته، پایه، تاریخ
+                  </p>
                 </div>
                 <div class="necessary-item">
-                  <h4>امکان آپلود جزوات
-                  </h4>
+                  <h4>امکان آپلود جزوات</h4>
                   <p>- امکان آپلود فایل های درسی با فرمت های مختلف</p>
                 </div>
                 <div class="necessary-item">
                   <h4>امکان دانلود فایل های درسی</h4>
-                  <p>- امکان دانلود و قابلیت پرینت و PDF فایل ها و مطالب درسی</p>
+                  <p>
+                    - امکان دانلود و قابلیت پرینت و PDF فایل ها و مطالب درسی
+                  </p>
                 </div>
                 <div class="necessary-item">
                   <h4>دسته بندی و سطح دسترسی کاربران</h4>
-                  <p>- قابلیت وجود کاربران مختلف با دسترسی های مختلف در نقش های ادمین، ناظر، کاربر، نویسنده</p>
+                  <p>
+                    - قابلیت وجود کاربران مختلف با دسترسی های مختلف در نقش های
+                    ادمین، ناظر، کاربر، نویسنده
+                  </p>
                 </div>
                 <div class="necessary-item">
                   <h4>جستجو</h4>
-                  <p>- قابلیت جستجو دروس و جزوات با فیلتر های مختلف و داینامیک</p>
+                  <p>
+                    - قابلیت جستجو دروس و جزوات با فیلتر های مختلف و داینامیک
+                  </p>
                 </div>
                 <div class="necessary-item">
                   <h4>ویرایش مطالب و جزوات</h4>
-                  <p>- ادمین و ناظر و نویسنده قابلیت ویرایش مطالب را داشته باشند</p>
+                  <p>
+                    - ادمین و ناظر و نویسنده قابلیت ویرایش مطالب را داشته باشند
+                  </p>
                 </div>
                 <div class="necessary-item">
-                  <h4>امکان ثبت تغییرات و ویرایش مطالب توسط کاربر
-                  </h4>
-                  <p>- قابلیت ارائه گزارش و ویرایش مطالب و جزوات کاربران و تایید توسط ناظر</p>
+                  <h4>امکان ثبت تغییرات و ویرایش مطالب توسط کاربر</h4>
+                  <p>
+                    - قابلیت ارائه گزارش و ویرایش مطالب و جزوات کاربران و تایید
+                    توسط ناظر
+                  </p>
                 </div>
                 <div class="necessary-item">
-                  <h4>امکان حذف مطالب و جزوات
-                  </h4>
+                  <h4>امکان حذف مطالب و جزوات</h4>
                   <p>- قابلیت حذف مطالب</p>
                 </div>
                 <div class="necessary-item">
                   <h4>امکان پرداخت</h4>
-                  <p>- در راستای ارتقای سرویس، امکان Donate کردن وجود داشته باشه</p>
+                  <p>
+                    - در راستای ارتقای سرویس، امکان Donate کردن وجود داشته باشه
+                  </p>
                 </div>
                 <div class="necessary-item">
                   <h4>امکان پرداخت آفلاین</h4>
@@ -355,7 +368,10 @@
                 </div>
                 <div class="necessary-item">
                   <h4>امکان درآمدزایی</h4>
-                  <p>- قابلیت درآمدزایی در صورت ارائه مطالب آموزشی در مورد قهدریجان</p>
+                  <p>
+                    - قابلیت درآمدزایی در صورت ارائه مطالب آموزشی در مورد
+                    قهدریجان
+                  </p>
                 </div>
                 <div class="necessary-item">
                   <h4>دروس پیشنهادی</h4>
@@ -368,7 +384,6 @@
       </div>
     </section>
 
-
     <!-- model section -->
     <section id="chart">
       <div class="container">
@@ -380,26 +395,24 @@
               <hr />
             </div>
           </div>
-          <div class="col-SM-12" >
-            <p style="text-align: justify;">
-              مدل آبشاری یک مدل ترتیبی توسعه و تولید نرم‌افزار است و در آن مراحل تولید به شکل یک جریان مداوم متمایل به سمت پایین است (همانند یک آبشار) که شامل فازهای تحلیل خواسته‌ها،طراحی، پیاده‌سازی یا implementation، ٓازمودن و تست کردن، یکپارچه سازی یا integration، و دادن محصول به بازار می‌شود. اغلب گفته می‌شود ریشهٔ اصطلاح آبشاری از مقاله‌ای گرفته شده‌است که توسط وینستون واکر رویس در سال ۱۹۷۰ نوشته شده‌است. مدیریت و مراحل تکمیل پروژه در این متدولوژی به سادگی قابل پیاده‌سازی است. زیرا در مرحله اول که مرحله بررسی نیازمندی‌های پروژه می‌باشد، مشتری و تیم برنامه‌نویسی طی چند جلسه به بررسی نیازمندی‌ها و خواسته‌های پروژه می‌پردازند
+          <div class="col-SM-12">
+            <p style="text-align: justify">
+              مدل آبشاری یک مدل ترتیبی توسعه و تولید نرم‌افزار است و در آن مراحل
+              تولید به شکل یک جریان مداوم متمایل به سمت پایین است (همانند یک
+              آبشار) که شامل فازهای تحلیل خواسته‌ها،طراحی، پیاده‌سازی یا
+              implementation، ٓازمودن و تست کردن، یکپارچه سازی یا integration، و
+              دادن محصول به بازار می‌شود. اغلب گفته می‌شود ریشهٔ اصطلاح آبشاری
+              از مقاله‌ای گرفته شده‌است که توسط وینستون واکر رویس در سال ۱۹۷۰
+              نوشته شده‌است. مدیریت و مراحل تکمیل پروژه در این متدولوژی به سادگی
+              قابل پیاده‌سازی است. زیرا در مرحله اول که مرحله بررسی نیازمندی‌های
+              پروژه می‌باشد، مشتری و تیم برنامه‌نویسی طی چند جلسه به بررسی
+              نیازمندی‌ها و خواسته‌های پروژه می‌پردازند
             </p>
-            <p>
-              دلایل انتخاب :
-            </p>
-            <p>
-              ۱. مشخص بودن نیاز مندی ها 
-            </p>
-            <p>
-              ۲. مشخص بودن اعضای گروه 
-            </p>
-            <p>
-              ۳. مناسب بودن فرایند ترتیبی برای گروه های کوچک
-            </p>
-            <p>
-              ۴ . مشخص بودن شرایط توسعه 
-            </p>
-
+            <p>دلایل انتخاب :</p>
+            <p>۱. مشخص بودن نیاز مندی ها</p>
+            <p>۲. مشخص بودن اعضای گروه</p>
+            <p>۳. مناسب بودن فرایند ترتیبی برای گروه های کوچک</p>
+            <p>۴ . مشخص بودن شرایط توسعه</p>
           </div>
         </div>
       </div>
@@ -416,8 +429,30 @@
             </div>
           </div>
           <div class="col-md-8 col-md-offset-2">
-            <img src="./images/chart.jpg" style="width: 100%;">
+            <img src="./images/chart.jpg" style="width: 100%" />
           </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="about">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 col-sm-12 text-center">
+            <div class="section-title">
+              <strong>۰۷</strong>
+              <h1 class="heading bold">پروتوتایپ</h1>
+              <hr />
+            </div>
+          </div>
+
+          <div class="col-11">
+            <img src="./images/Landing.jpg" alt="" style="width: 100%" />
+          </div>
+          <div class="col-11">
+            <img src="./images/Landing – 1.jpg" alt="" style="width: 100%" />
+          </div>
+          
         </div>
       </div>
     </section>
@@ -442,7 +477,7 @@
               />
               <div class="team-des">
                 <h4>حسین شیره جونی</h4>
-                <h3>متخصص تهیه و توزیع انواع شیره حیوانی و گیاهی</h3>
+                <h3>برنامه نویس</h3>
                 <hr />
                 <ul class="social-icon">
                   <li>
@@ -478,8 +513,8 @@
                 alt="team img"
               />
               <div class="team-des">
-                <h4>Mary</h4>
-                <h3>Core Developer</h3>
+                <h4>فرزین فیروزی</h4>
+                <h3>برنامه نویس</h3>
                 <hr />
                 <ul class="social-icon">
                   <li>
