--- a/index.html
+++ b/index.html
@@ -343,6 +343,38 @@
       </div>
     </section>
 
+    <section id="chart">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 col-sm-12 text-center">
+            <div class="section-title">
+              <strong>۰۶</strong>
+              <h1 class="heading bold">بحث درمود فرآیندی</h1>
+              <hr />
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-4">
+            <img src="./images/chat_m1.jpeg" style="width: 100%;height: 640px;" />
+            <div  style="width: 26px;height: 26px;border: 1px solid;border-radius:50%;margin:10px auto;background-color:white;" >
+                <p  style="font-weight:bold;color:black;text-align:center;">1</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-4">
+            <img src="./images/chat_m2.jpeg" style="width: 100%;height: 640px;" />
+            <div  style="width: 26px;height: 26px;border: 1px solid;border-radius:50%;margin:10px auto;background-color:white;" >
+                <p  style="font-weight:bold;color:black;text-align:center;">2</p>
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-4">
+            <img src="./images/chat_m3.jpeg" style="width: 100%;height: 640px;" />
+            <div  style="width: 26px;height: 26px;border: 1px solid;border-radius:50%;margin:10px auto;background-color:white;" >
+                <p  style="font-weight:bold;color:black;text-align:center;">3</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <section id="about">
       <div class="container">
         <div class="row">
@@ -370,7 +402,7 @@
         <div class="row">
           <div class="col-md-12 col-sm-12">
             <div class="section-title">
-              <strong>۰۶</strong>
+              <strong>۰۸</strong>
               <h1 class="heading bold">تیم خفن ما</h1>
               <hr />
             </div>
