--- a/index.html
+++ b/index.html
@@ -417,30 +417,6 @@
               <div class="team-des">
                 <h4>حسین شیره جونی</h4>
                 <h3>برنامه نویس</h3>
-                <hr />
-                <ul class="social-icon">
-                  <li>
-                    <a
-                      href="#"
-                      class="fa fa-facebook wow fadeIn"
-                      data-wow-delay="0.3s"
-                    ></a>
-                  </li>
-                  <li>
-                    <a
-                      href="#"
-                      class="fa fa-twitter wow fadeIn"
-                      data-wow-delay="0.6s"
-                    ></a>
-                  </li>
-                  <li>
-                    <a
-                      href="#"
-                      class="fa fa-dribbble wow fadeIn"
-                      data-wow-delay="0.9s"
-                    ></a>
-                  </li>
-                </ul>
               </div>
             </div>
           </div>
@@ -455,7 +431,6 @@
                 <h4>فرزین فیروزی</h4>
                 <hr>
                 <h3>برنامه نویس</h3>
-                
               </div>
             </div>
           </div>
@@ -477,12 +452,12 @@
           <div class="col-md-3 col-sm-6 wow fadeIn" data-wow-delay="1.6s">
             <div class="team-wrapper">
               <img
-                src="images/farzin.jpg"
+                src="images/amir.png"
                 class="img-responsive"
                 alt="team img"
               />
               <div class="team-des">
-                <h4>فرزین فیروزی</h4>
+                <h4>امیر حسین موسوی</h4>
                 <hr>
                 <h3>برنامه نویس</h3>
                 
