--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           </div>
           <div class="col-sm-12">
             <ul style="font-size: 18px">
-              <li>مدیران و سرمایه گذاران سامانه قدرینو ( به جز اکبری )</li>
+              <li>مدیران و سرمایه گذاران سامانه قدرینو</li>
               <li>دانش آموزان</li>
               <li>دانشجویان</li>
               <li>اساتید</li>
